--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	</header>
 	<main class="game">
 		<center>
-			<!-- <div row="4" column="1" class = "trial"></div>
+			<div row="4" column="1" class = "trial"></div>
 			<div row="4" column="2" class = "trial"></div>
 			<div row="4" column="3" class = "trial"></div>
 			<div row="4" column="4" class = "trial"></div>
@@ -31,7 +31,7 @@
 			<div row="1" column="1" class = "trial"></div>
 			<div row="1" column="2" class = "trial"></div>
 			<div row="1" column="3" class = "trial"></div>
-			<div row="1" column="4" class = "trial"></div> -->
+			<div row="1" column="4" class = "trial"></div>
 			<div id="chessBoardNormal"></div>
 			<script type="text/javascript" src="js/pathfinder.js"></script>
 		</center>
